// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`plugins/styled-components > should enable ssr when target contain node 1`] = `
[
  {
    "resolve": {
      "fullySpecified": false,
    },
    "test": /\\\\\\.m\\?js/,
  },
  {
    "include": [
      {
        "and": [
          "",
          {
            "not": /\\[\\\\\\\\/\\]node_modules\\[\\\\\\\\/\\]/,
          },
        ],
      },
      /\\\\\\.\\(\\?:ts\\|tsx\\|jsx\\|mts\\|cts\\)\\$/,
    ],
    "test": /\\\\\\.\\(\\?:js\\|jsx\\|mjs\\|cjs\\|ts\\|tsx\\|mts\\|cts\\)\\$/,
    "type": "javascript/auto",
    "use": [
      {
        "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/babel-loader/lib/index.js",
        "options": {
          "babelrc": false,
          "compact": false,
          "configFile": false,
          "plugins": [
            [
              "<WORKSPACE>/node_modules/<PNPM_INNER>/@babel/plugin-proposal-decorators/lib/index.js",
              {
                "version": "legacy",
              },
            ],
            "<WORKSPACE>/node_modules/<PNPM_INNER>/@babel/plugin-proposal-export-default-from/lib/index.js",
            "<WORKSPACE>/node_modules/<PNPM_INNER>/@babel/plugin-proposal-partial-application/lib/index.js",
            [
              "<WORKSPACE>/node_modules/<PNPM_INNER>/@babel/plugin-proposal-pipeline-operator/lib/index.js",
              {
                "proposal": "minimal",
              },
            ],
            [
              "<WORKSPACE>/node_modules/<PNPM_INNER>/@babel/plugin-transform-runtime/lib/index.js",
              {
                "useESModules": true,
                "version": "7.24.7",
              },
            ],
            "<WORKSPACE>/packages/cli/babel-preset/src/pluginLockCorejsVersion.js",
            [
              "<ROOT>/compiled/babel-plugin-lodash/index.js",
              {},
            ],
            [
              "<WORKSPACE>/node_modules/<PNPM_INNER>/babel-plugin-import/lib/index.js",
              {
                "camel2DashComponentName": false,
                "libraryDirectory": "es",
                "libraryName": "@arco-design/web-react",
                "style": true,
              },
              "@arco-design/web-react",
            ],
            [
              "<WORKSPACE>/node_modules/<PNPM_INNER>/babel-plugin-import/lib/index.js",
              {
                "camel2DashComponentName": false,
                "libraryDirectory": "react-icon",
                "libraryName": "@arco-design/web-react/icon",
              },
              "@arco-design/web-react/icon",
            ],
            [
              "<WORKSPACE>/node_modules/<PNPM_INNER>/react-refresh/babel.js",
              {
                "skipEnvCheck": true,
              },
            ],
            [
              "<WORKSPACE>/node_modules/<PNPM_INNER>/babel-plugin-styled-components/lib/index.js",
              {
                "displayName": true,
                "pure": false,
                "ssr": true,
                "transpileTemplateLiterals": true,
              },
            ],
          ],
          "presets": [
            [
              "<WORKSPACE>/node_modules/<PNPM_INNER>/@babel/preset-env/lib/index.js",
              {
                "bugfixes": true,
                "corejs": {
                  "proposals": true,
                  "version": "3.37",
                },
                "exclude": [
                  "transform-typeof-symbol",
                ],
                "include": [
                  "@babel/plugin-transform-class-properties",
                ],
                "modules": "commonjs",
                "targets": [
                  "> 0.01%",
                  "not dead",
                  "not op_mini all",
                ],
                "useBuiltIns": "entry",
              },
            ],
            [
              "<WORKSPACE>/node_modules/<PNPM_INNER>/@babel/preset-typescript/lib/index.js",
              {
                "allExtensions": true,
                "allowDeclareFields": true,
                "allowNamespaces": true,
                "isTSX": true,
                "optimizeConstEnums": true,
              },
            ],
            [
              "<WORKSPACE>/node_modules/<PNPM_INNER>/@babel/preset-react/lib/index.js",
              {
                "development": true,
                "runtime": "automatic",
                "useBuiltIns": true,
                "useSpread": false,
              },
            ],
          ],
        },
      },
    ],
  },
]
`;

exports[`plugins/styled-components > should enable ssr when target contain node 2`] = `
[
  {
    "resolve": {
      "fullySpecified": false,
    },
    "test": /\\\\\\.m\\?js/,
  },
  {
    "include": [
      {
        "and": [
          "",
          {
            "not": /\\[\\\\\\\\/\\]node_modules\\[\\\\\\\\/\\]/,
          },
        ],
      },
      /\\\\\\.\\(\\?:ts\\|tsx\\|jsx\\|mts\\|cts\\)\\$/,
    ],
    "test": /\\\\\\.\\(\\?:js\\|jsx\\|mjs\\|cjs\\|ts\\|tsx\\|mts\\|cts\\)\\$/,
    "type": "javascript/auto",
    "use": [
      {
        "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/babel-loader/lib/index.js",
        "options": {
          "babelrc": false,
          "compact": false,
          "configFile": false,
          "plugins": [
            [
              "<WORKSPACE>/node_modules/<PNPM_INNER>/@babel/plugin-proposal-decorators/lib/index.js",
              {
                "version": "legacy",
              },
            ],
            "<WORKSPACE>/node_modules/<PNPM_INNER>/@babel/plugin-proposal-export-default-from/lib/index.js",
            "<WORKSPACE>/node_modules/<PNPM_INNER>/@babel/plugin-proposal-partial-application/lib/index.js",
            [
              "<WORKSPACE>/node_modules/<PNPM_INNER>/@babel/plugin-proposal-pipeline-operator/lib/index.js",
              {
                "proposal": "minimal",
              },
            ],
            "<WORKSPACE>/node_modules/<PNPM_INNER>/babel-plugin-dynamic-import-node/lib/index.js",
            [
              "<ROOT>/compiled/babel-plugin-lodash/index.js",
              {},
            ],
            [
              "<WORKSPACE>/node_modules/<PNPM_INNER>/babel-plugin-import/lib/index.js",
              {
                "camel2DashComponentName": false,
                "libraryDirectory": "lib",
                "libraryName": "@arco-design/web-react",
                "style": true,
              },
              "@arco-design/web-react",
            ],
            [
              "<WORKSPACE>/node_modules/<PNPM_INNER>/babel-plugin-import/lib/index.js",
              {
                "camel2DashComponentName": false,
                "libraryDirectory": "react-icon-cjs",
                "libraryName": "@arco-design/web-react/icon",
              },
              "@arco-design/web-react/icon",
            ],
            [
              "<WORKSPACE>/node_modules/<PNPM_INNER>/babel-plugin-styled-components/lib/index.js",
              {
                "displayName": true,
                "pure": false,
                "ssr": true,
                "transpileTemplateLiterals": true,
              },
            ],
          ],
          "presets": [
            [
              "<WORKSPACE>/node_modules/<PNPM_INNER>/@babel/preset-env/lib/index.js",
              {
                "exclude": [
                  "transform-typeof-symbol",
                ],
                "include": [
                  "@babel/plugin-transform-class-properties",
                ],
                "modules": "commonjs",
                "targets": [
                  "node >= 14",
                ],
              },
            ],
            [
              "<WORKSPACE>/node_modules/<PNPM_INNER>/@babel/preset-typescript/lib/index.js",
              {
                "allExtensions": true,
                "allowDeclareFields": true,
                "allowNamespaces": true,
                "isTSX": true,
                "optimizeConstEnums": true,
              },
            ],
            [
              "<WORKSPACE>/node_modules/<PNPM_INNER>/@babel/preset-react/lib/index.js",
              {
                "development": true,
                "runtime": "automatic",
                "useBuiltIns": true,
                "useSpread": false,
              },
            ],
          ],
        },
      },
    ],
  },
]
`;

exports[`plugins/styled-components > should works in webpack babel mode 1`] = `
[
  {
    "resolve": {
      "fullySpecified": false,
    },
    "test": /\\\\\\.m\\?js/,
  },
  {
    "include": [
      {
        "and": [
          "",
          {
            "not": /\\[\\\\\\\\/\\]node_modules\\[\\\\\\\\/\\]/,
          },
        ],
      },
      /\\\\\\.\\(\\?:ts\\|tsx\\|jsx\\|mts\\|cts\\)\\$/,
    ],
    "test": /\\\\\\.\\(\\?:js\\|jsx\\|mjs\\|cjs\\|ts\\|tsx\\|mts\\|cts\\)\\$/,
    "type": "javascript/auto",
    "use": [
      {
        "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/babel-loader/lib/index.js",
        "options": {
          "babelrc": false,
          "compact": false,
          "configFile": false,
          "plugins": [
            [
              "<WORKSPACE>/node_modules/<PNPM_INNER>/@babel/plugin-proposal-decorators/lib/index.js",
              {
                "version": "legacy",
              },
            ],
            "<WORKSPACE>/node_modules/<PNPM_INNER>/@babel/plugin-proposal-export-default-from/lib/index.js",
            "<WORKSPACE>/node_modules/<PNPM_INNER>/@babel/plugin-proposal-partial-application/lib/index.js",
            [
              "<WORKSPACE>/node_modules/<PNPM_INNER>/@babel/plugin-proposal-pipeline-operator/lib/index.js",
              {
                "proposal": "minimal",
              },
            ],
            [
              "<WORKSPACE>/node_modules/<PNPM_INNER>/@babel/plugin-transform-runtime/lib/index.js",
              {
                "useESModules": true,
                "version": "7.24.7",
              },
            ],
            "<WORKSPACE>/packages/cli/babel-preset/src/pluginLockCorejsVersion.js",
            [
              "<ROOT>/compiled/babel-plugin-lodash/index.js",
              {},
            ],
            [
              "<WORKSPACE>/node_modules/<PNPM_INNER>/babel-plugin-import/lib/index.js",
              {
                "camel2DashComponentName": false,
                "libraryDirectory": "es",
                "libraryName": "@arco-design/web-react",
                "style": true,
              },
              "@arco-design/web-react",
            ],
            [
              "<WORKSPACE>/node_modules/<PNPM_INNER>/babel-plugin-import/lib/index.js",
              {
                "camel2DashComponentName": false,
                "libraryDirectory": "react-icon",
                "libraryName": "@arco-design/web-react/icon",
              },
              "@arco-design/web-react/icon",
            ],
            [
              "<WORKSPACE>/node_modules/<PNPM_INNER>/react-refresh/babel.js",
              {
                "skipEnvCheck": true,
              },
            ],
            [
              "<WORKSPACE>/node_modules/<PNPM_INNER>/babel-plugin-styled-components/lib/index.js",
              {
                "displayName": true,
                "pure": false,
                "ssr": false,
                "transpileTemplateLiterals": true,
              },
            ],
          ],
          "presets": [
            [
              "<WORKSPACE>/node_modules/<PNPM_INNER>/@babel/preset-env/lib/index.js",
              {
                "bugfixes": true,
                "corejs": {
                  "proposals": true,
                  "version": "3.37",
                },
                "exclude": [
                  "transform-typeof-symbol",
                ],
                "include": [
                  "@babel/plugin-transform-class-properties",
                ],
                "modules": "commonjs",
                "targets": [
                  "> 0.01%",
                  "not dead",
                  "not op_mini all",
                ],
                "useBuiltIns": "entry",
              },
            ],
            [
              "<WORKSPACE>/node_modules/<PNPM_INNER>/@babel/preset-typescript/lib/index.js",
              {
                "allExtensions": true,
                "allowDeclareFields": true,
                "allowNamespaces": true,
                "isTSX": true,
                "optimizeConstEnums": true,
              },
            ],
            [
              "<WORKSPACE>/node_modules/<PNPM_INNER>/@babel/preset-react/lib/index.js",
              {
                "development": true,
                "runtime": "automatic",
                "useBuiltIns": true,
                "useSpread": false,
              },
            ],
          ],
        },
      },
    ],
  },
]
`;

exports[`plugins/styled-components > should works in webpack swc mode 1`] = `
[
  {
    "resolve": {
      "fullySpecified": false,
    },
    "test": /\\\\\\.m\\?js/,
  },
  {
    "include": [
      {
        "and": [
          "",
          {
            "not": /\\[\\\\\\\\/\\]node_modules\\[\\\\\\\\/\\]/,
          },
        ],
      },
      /\\\\\\.\\(\\?:ts\\|tsx\\|jsx\\|mts\\|cts\\)\\$/,
    ],
    "test": /\\\\\\.\\(\\?:js\\|jsx\\|mjs\\|cjs\\|ts\\|tsx\\|mts\\|cts\\)\\$/,
    "type": "javascript/auto",
    "use": [
      {
        "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rsbuild/plugin-webpack-swc/dist/loader.cjs",
        "options": {
          "cwd": "",
          "env": {
            "coreJs": "3.38",
            "mode": "entry",
            "targets": [
              "> 0.01%",
              "not dead",
              "not op_mini all",
            ],
          },
          "extensions": {
            "lockCorejsVersion": {
              "corejs": "<WORKSPACE>/node_modules/<PNPM_INNER>/core-js",
              "swcHelpers": "<WORKSPACE>/node_modules/<PNPM_INNER>/@swc/helpers",
            },
            "lodash": {
              "cwd": "",
              "ids": [
                "lodash",
                "lodash-es",
              ],
            },
            "pluginImport": [
              {
                "camelToDashComponentName": false,
                "libraryDirectory": "es",
                "libraryName": "@arco-design/web-react",
                "style": true,
              },
              {
                "camelToDashComponentName": false,
                "libraryDirectory": "react-icon",
                "libraryName": "@arco-design/web-react/icon",
              },
            ],
            "styledComponents": {
              "displayName": true,
              "pure": false,
              "ssr": false,
              "transpileTemplateLiterals": true,
            },
          },
          "jsc": {
            "externalHelpers": true,
            "parser": {
              "decorators": true,
              "syntax": "typescript",
              "tsx": true,
            },
            "transform": {
              "decoratorMetadata": true,
              "legacyDecorator": true,
              "react": {
                "refresh": true,
                "runtime": "classic",
              },
              "useDefineForClassFields": false,
            },
          },
        },
      },
    ],
  },
]
`;
